# chat_app

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: server_config.env
include/common/: chat_message.h  config_loader.h  message.h  protocol.h  tcp_connection.h  user.h
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt  chat_message.cpp  config_loader.cpp  protocol.cpp  tcp_connection.cpp  user.cpp
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/common_tests/: config_loader_test.cpp
